--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body{
     color: white;
   text-decoration: none;
   &:hover{
-    color: #ffbd39;
+    color: #ffbd39 !important;
     text-decoration: underline;
   }
     
@@ -80,30 +80,4 @@ body{
 }
 .nav-link {
     color: white !important;
-}
-
-@media screen  and (max-width:767px) {
-    .navbar a {
-        font-size: 18px;
-        
-    }
-    .banner-content h1 {
-        font-size: 45px;
-    }
-    .banner h2 {
-        font-size: 30px;
-        
-    }
-    .using-img img {
-        height: 70px;
-    }
-
-    .work-img {
-       width: 100%;
-       height: auto;
-    }
-    .about-img img {
-        width: 100%;
-        height: auto;
-    }
 }
